update UX for home screen

--- a/LazzyBee/en.lproj/Localizable.strings
+++ b/LazzyBee/en.lproj/Localizable.strings
@@ -90,6 +90,8 @@
 "Level" = "Level";
 "Total" = "Total";
 "No result format" = "No result for \"%@\"\nWe will update soon.";
+"Add" = "Add";
+"Added" = "Added to learn";
 
 //Settings
 "Change language" = "Change language";
