--- a/LazzyBee/vi.lproj/Localizable.strings
+++ b/LazzyBee/vi.lproj/Localizable.strings
@@ -104,6 +104,7 @@
 "Daily total words" = "Tổng số từ mỗi ngày";
 "Waiting time to show answer" = "Thời gian chờ hiện trả lời";
 "Autoplay sound" = "Tự động đọc từ";
+"Display meaning" = "Hiển thị nghĩa";
 "Turn on reminder" = "Bật nhắc nhở";
 "Time to remind" = "Giờ nhắc nhở";
 "Update database" = "Cập nhật dữ liệu";
