--- a/LazzyBee/en.lproj/Localizable.strings
+++ b/LazzyBee/en.lproj/Localizable.strings
@@ -40,6 +40,8 @@
 "Oops!" = "Oops!";
 "No more word. Click More Words" = "There is no more word to learn today. Click \"More Words\" if you really want to learn more.";
 "Still have some words need to review" = "You still have a few words need to review today.";
+"Do you want to backup your learning progress?" = "Do you want to backup data?";
+
 
 //Major
 "Close" = "Close";
