--- a/LazzyBee/vi.lproj/Localizable.strings
+++ b/LazzyBee/vi.lproj/Localizable.strings
@@ -41,6 +41,7 @@
 "No more word. Click More Words" = "Bạn đã học hết từ ngày hôm nay. Ấn \"Thêm từ\" nếu bạn thực sự muốn học thêm.";
 "Still have some words need to review" = "Bạn vẫn còn một số từ cần phải ôn lại ngày hôm nay.";
 "Do you want to backup your learning progress?" = "LazzyBee sẽ sao lưu dữ liệu học tập của bạn. Bạn có muốn thực hiện không?";
+"Vocabulary testing" = "Kiểm tra vốn từ";
 
 //Major
 "Close" = "Đóng";
