--- a/LazzyBee/en.lproj/Localizable.strings
+++ b/LazzyBee/en.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "Start learning" = "Start learning";
 "Incoming list" = "Incoming list";
 "More words" = "More words";
-"Notice" = "Notice";
+"Notice" = "Attention";
 "Later" = "Later";
 "Cancel" = "Cancel";
 "Learn now" = "Learn now";
