--- a/LazzyBee/en.lproj/Localizable.strings
+++ b/LazzyBee/en.lproj/Localizable.strings
@@ -178,7 +178,8 @@
 "Create new list" = "Create new list";
 "Import from existed list" = "Import from existed list";
 "Are you sure you want to cancel?" = "Are you sure you want to cancel?";
-
+"No" = "No";
+"Yes" = "Yes";
 
 
 
